# dvmc

./: .gitignore  .release-ignore  CMakeLists.txt  README.md  makefile  release.sh
samples/: README
samples/12x12_U8_Ne126/: README  run_vmc.sh  run_vmc.slurm
samples/16x1_U8_Ne14/: spectrumpara.def
samples/16x1_U8_Ne16/: StdFace.def  run_vmc.sh  run_vmc.slurm  spectrumpara.def
samples/2s0b/: analytical_mVMC.py  coulombintra.def  modpara.def  trans.def
samples/2s1b/: analytical_mVMC.py  coulombintra.def  locspn.def  modpara.def  namelist.def  orbitalidx.def  qptransidx.def  run.sh  trans.def
samples/2x2_U8_N2/: StdFace.def  spectrumpara.def
samples/4x4_U8_Ne14/: run_vmc.slurm  spectrumpara.def
samples/4x4_U8_Ne16/: StdFace.def  run_vmc.sh  spectrumpara.def
samples/chain2_U8/: README  StdFace.def  analytical_mVMC.py  (+8 more)
src/: make.sys.luna  make.sys.new  make.sys.sekirei
tool/dvmc/: CMakeLists.txt  README  averageOhgoe.py  cluster.py  convertOutputBin.py  dos_analysis.py  dvmc_spectrum.py  filter_bin.sh  generate_template_gnuplot.py  gnupy  initHFB.py  init_groundstate.py  makeDH4.py  makeExcitation.py  makeFullGreen.py  makeGreenOhgoe.py  mergeOutputBin.py  postprocess_dVMC.sh  preprocess_dVMC.sh  selectExcitation.py  select_kPath.py  select_kPath_average.py  template_plot_Akw.gp  template_plot_allAkw.gp  template_plot_dos.gp  vmc_gnuplot  zvo_var_average.py
tool/dvmc/old/: dvmc_fft.py  initHFB_gvmc.py  mergeOutput_optimFail.py  mvmc_spectrum_bad.py  mvmc_spectrum_c.py  print_spectrum.py  vmc_spectrum_k.py
tool/dvmc/src/: dvmc_gnuplot.c  dvmc_speedup.c
(+91 files in other folders)
